[package]
name = "chess_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }


[lib]
name = "chess_lib"
path = "../chess_lib/src/lib.rs"